# watermark-python

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release-on-main.yml
docs/: CHANGELOG.md  OPERATIONS.md  RELEASE_POLICY.md  SESSION_HISTORY.md  TROUBLESHOOTING.md
scripts/: build-portable.ps1
src/watermark_app/: __init__.py  __main__.py  config.py  graph.py  main.py  state.py  watermarking.py
src/watermark_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.py  test_graph.py  test_main.py  test_state.py
