[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watermark-python"
version = "0.1.0"
description = "Scheduled SharePoint watermark automation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name" }
]
dependencies = [
  "msal>=1.30.0",
  "requests>=2.32.0",
  "python-dotenv>=1.0.1",
  "python-docx>=1.1.2",
  "openpyxl>=3.1.5",
  "Pillow>=10.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
